--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "Alven Maretinus",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.6.0"
+    "mongoose": "^5.6.0",
+    "mongoose-unique-validator": "^2.0.3"
   }
 }
